Adding additional server functionality, and enabling multiple entity lookup by key/version